chore: modernize java quickstart